<?xml version="1.0"?>
<package>
  <name>turtlebot_2dnav</name>
  <version>1.0.2</version>
  <description>The turtlebot_2dnav package</description>

  <maintainer email="pexison@gmail.com">John</maintainer>
  <author email="pexison@gmail.com">John</author>

  <url type="repository">https://github.com/pexison/turtlebot_2dnav-release</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
